--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
   font-size: 2em;
   border: none;
 }
-.form-button {
+#form-button {
   width: 15%;
   color: #e6d3a7;
   background-color: #392f2f;
@@ -54,7 +54,18 @@ h1 {
   border: none;
   text-align: center;
 }
+.hidden {
+  display: none;
+}
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
 
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
 footer {
   text-align: center;
   margin-top: 10px;
