--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
   background-color: rgba(255, 255, 255, 0.7);
   padding: 15px;
   border-radius: 0px 15px 15px 0px;
-  border-left: #392f2f solid;
+  border-left: 5px #392f2f solid;
   font-family: "Chathura", sans-serif;
   font-size: 2.3em;
   line-height: 30px;
@@ -72,7 +72,13 @@ footer {
   font-size: 2.1em;
   color: #e6d3a7;
 }
+footer:hover {
+  color: #392f2f;
+}
 a {
   color: #e6d3a7;
   text-decoration: none;
+}
+a:hover {
+  color: #392f2f;
 }
